@@ -9,6 +9,9 @@ Revision history for Perl extension PGXN::API
       - Files specified in the `docfile` key are now ignored if Text::Markup
         does not recognize, since the cannot then be parsed for serving as
         HTML.
+      - Worked around an [Archive::Zip
+        bug](https://rt.cpan.org/Ticket/Display.html?id=74255.) when reading
+        the README file for indexing.
 
 0.16.1  2012-01-10T04:30:02Z
       - Added `version_string` class method to PGXN::API. It should always be
